--- a/about-me.html
+++ b/about-me.html
@@ -20,7 +20,7 @@
     <!-- NavBar -->
     <nav class="navbar navbar-expand-lg bg-light navbar-light">
         <div class="container">
-            <a href="cards.html" class="nav-link">
+            <a href="/cards" class="nav-link">
                 <i class="bi bi-suit-club-fill"></i>
                 <i class="bi bi-suit-diamond-fill"></i>
                 <i class="bi bi-suit-heart-fill"></i>
@@ -33,17 +33,17 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
                         <li>
-                            <a href="index.html" class="nav-link">Home</a>
+                            <a href="/index" class="nav-link">Home</a>
                         </li>
                     </li>
                     <li class="nav-item">
                         <li>
-                            <a href="about-me.html" class="nav-link">About Me</a>
+                            <a href="/about-me" class="nav-link">About Me</a>
                         </li>
                     </li>
                     <li class="nav-item">
                         <li>
-                            <a href="contact.html" class="nav-link">Contact</a>
+                            <a href="/contact" class="nav-link">Contact</a>
                         </li>
                     </li>
                 </ul>
