--- a/contact.html
+++ b/contact.html
@@ -20,11 +20,8 @@
     <!-- NavBar -->
     <nav class="navbar navbar-expand-lg bg-light navbar-light">
         <div class="container">
-            <a href="cards.html" class="nav-link">
-                <i class="bi bi-suit-club-fill"></i>
-                <i class="bi bi-suit-diamond-fill"></i>
-                <i class="bi bi-suit-heart-fill"></i>
-                <i class="bi bi-suit-spade-fill"></i>
+            <a href="index.html" class="nav-link">
+                <i class="bi bi-house"></i>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
                 <span class="navbar-toggler-icon"></span>
@@ -33,17 +30,22 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
                         <li>
-                            <a href="index.html" class="nav-link">Home</a>
-                        </li>
-                    </li>
-                    <li class="nav-item">
-                        <li>
                             <a href="about-me.html" class="nav-link">About Me</a>
                         </li>
                     </li>
                     <li class="nav-item">
                         <li>
                             <a href="contact.html" class="nav-link">Contact</a>
+                        </li>
+                    </li>
+                    <li class="nav-item">
+                        <li>
+                            <a href="index.html" class="nav-link">
+                                <i class="bi bi-suit-club-fill"></i>
+                                <i class="bi bi-suit-diamond-fill"></i>
+                                <i class="bi bi-suit-heart-fill"></i>
+                                <i class="bi bi-suit-spade-fill"></i>
+                            </a>
                         </li>
                     </li>
                 </ul>
