--- a/cards.html
+++ b/cards.html
@@ -41,7 +41,7 @@
                     </li>
                     <li class="nav-item">
                         <li>
-                            <a href="index.html" class="nav-link">
+                            <a href="cards.html" class="nav-link">
                                 <i class="bi bi-suit-club-fill"></i>
                                 <i class="bi bi-suit-diamond-fill"></i>
                                 <i class="bi bi-suit-heart-fill"></i>
