--- a/cards.html
+++ b/cards.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link href="style.css" rel="stylesheet">
 
     <style>
         body {
@@ -17,7 +17,7 @@
         }
     </style>
   </head>
-  <body>
+  <body class="d-flex flex-column min-vh-100">
     <!-- NavBar -->
     <nav class="navbar navbar-expand-lg bg-light navbar-light">
         <div class="container">
@@ -54,7 +54,7 @@
         </div>
     </nav>
     <!-- Cards -->
-    <section class="py-5 text-center">
+    <section class="p-5 text-center">
     <div class="container">
         <div class="playing-card">
             <div class="flip-card">
@@ -98,4 +98,6 @@
         </div>
     </div>
 </section>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     </body>
+</html>
