--- a/cards.html
+++ b/cards.html
@@ -17,6 +17,7 @@
         }
     </style>
   </head>
+  <body>
     <!-- NavBar -->
     <nav class="navbar navbar-expand-lg bg-light navbar-light">
         <div class="container">
@@ -97,6 +98,6 @@
         </div>
     </div>
 </section>
+</body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-    </body>
 </html>
