fixing image issues

--- a/public/about-me.html
+++ b/public/about-me.html
@@ -72,7 +72,7 @@
                         I am constantly putting lots of effort in learning new things that is challenging and making something creative and practical that will make life easier for everyone.
                     </p>
                 </div>
-                <img class="img-fluid w-50 px-5 mx-auto rounded" src="Jiwon Park 2.JPG" alt="">
+                <img class="img-fluid w-50 px-5 mx-auto rounded" src="Jiwon Park 2.jpg" alt="">
             </div>
         </div>
     </section>
