--- a/public/cards.html
+++ b/public/cards.html
@@ -98,6 +98,14 @@
         </div>
     </div>
 </section>
+            <!-- Footer -->
+            <footer class="mt-auto bg-white text-dark text-center position-relative">
+                <div class="container">
+                    <p class="lead">Copyright &copy; 2022 Jiwon Park</p>
+                    <a href="" class="position-absolute bottom-0 end-0 p-5">
+                    </a>
+                </div>
+            </footer>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </html>
