--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
     <!-- Showcase -->
     <section class="bg-white text-dark p-5 text-center">
         <div class="container">
-            <img class="img-fluid w-1 py-2 mx-auto rounded" src="Jiwon Park.jpg" alt="" />
+            <img class="img-fluid py-5 rounded" src="Jiwon Park.jpg" alt="" />
             <div>
                 <h1>Jiwon Park</h1>
                     <p>College Student, Software Developer
