check out github

--- a/public/about-me.html
+++ b/public/about-me.html
@@ -70,6 +70,8 @@
                         However, the major interest that I pursued was programming. 
                         My passion for programming grew ever since I was a kid due to the influence of my brother.
                         I am constantly putting lots of effort in learning new things that is challenging and making something creative and practical that will make life easier for everyone.
+                        <br>
+                        If you are interested, check out my github!
                     </p>
                 </div>
                 <img class="img-fluid w-50 px-5 mx-auto rounded" src="Jiwon Park 2.jpg" alt="">
