--- a/public/about-me.html
+++ b/public/about-me.html
@@ -67,9 +67,12 @@
                         I'm a passionate person who loves to program, play games, perform card tricks, travel around the world for good food, and entertain people.
                         <br>
                         <br>
-                        However, the major interest that I pursued was programming. 
-                        My passion for programming grew ever since I was a kid due to the influence of my brother.
-                        I am constantly putting lots of effort in learning new things that is challenging and making something creative and practical that will make life easier for everyone.
+                        However, the major interest that I pursued was programming. Why?
+                        My passion for programming grew ever since I was a kid due to the influence of my brother. I have 2 brothers, one twin brother, and one older brother. All 3 of us always loved computers, new technology, and new games. My older brother was the pivot of our technology obsession and my twin brother and I followed. As my older brother graduated from college, he started working as a software engineer and my twin and I started to pursue the same path.
+                        <br>
+                        <br>
+                        I am constantly putting lots of effort in learning new things that is challenging and making something creative and practical that will make life easier for everyone. I am also looking for an internship as a SWE for summer 2023.
+                        <br>
                         <br>
                         If you are interested, check out my github!
                     </p>
