--- a/public/about-me.html
+++ b/public/about-me.html
@@ -8,21 +8,17 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="gradient.css">
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
-    <style>
-        body {
-            font-family: 'Montserrat', cursive;
-        }
-    </style>
   </head>
   <body class="d-flex flex-column min-vh-100">
     <!-- NavBar -->
     <nav class="navbar navbar-expand-lg bg-light navbar-light">
         <div class="container">
             <a href="index.html" class="nav-link">
-                <i class="bi bi-house"></i>
+                <i class="bi bi-house gradient"></i>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
                 <span class="navbar-toggler-icon"></span>
@@ -31,17 +27,17 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
                         <li>
-                            <a href="about-me.html" class="nav-link">About Me</a>
+                            <a href="about-me.html" class="nav-link gradient">About Me</a>
                         </li>
                     </li>
                     <li class="nav-item">
                         <li>
-                            <a href="contact.html" class="nav-link">Contact</a>
+                            <a href="contact.html" class="nav-link gradient">Contact</a>
                         </li>
                     </li>
                     <li class="nav-item">
                         <li>
-                            <a href="cards.html" class="nav-link">
+                            <a href="cards.html" class="nav-link gradient">
                                 <i class="bi bi-suit-club-fill"></i>
                                 <i class="bi bi-suit-diamond-fill"></i>
                                 <i class="bi bi-suit-heart-fill"></i>
@@ -58,7 +54,7 @@
         <div class="container">
             <div class="d-sm-flex">
                 <div>
-                    <h1 class="animate__animated animate__fadeInDown">
+                    <h1 class="gradient animate__animated animate__fadeInDown">
                         About Me
                     </h1>
                     <p class="animate__animated animate__fadeInUp lead my-4">
