--- a/public/contact.html
+++ b/public/contact.html
@@ -8,20 +8,16 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="gradient.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-
-    <style>
-        body {
-            font-family: "Montserrat", sans-serif;
-        }
-    </style>
   </head>
+  
   <body class="d-flex flex-column min-vh-100">
     <!-- NavBar -->
     <nav class="navbar navbar-expand-lg bg-light navbar-light">
         <div class="container">
-            <a href="index.html" class="nav-link">
+            <a href="index.html" class="nav-link gradient">
                 <i class="bi bi-house"></i>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
@@ -31,17 +27,17 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
                         <li>
-                            <a href="about-me.html" class="nav-link">About Me</a>
+                            <a href="about-me.html" class="nav-link gradient">About Me</a>
                         </li>
                     </li>
                     <li class="nav-item">
                         <li>
-                            <a href="contact.html" class="nav-link">Contact</a>
+                            <a href="contact.html" class="nav-link gradient">Contact</a>
                         </li>
                     </li>
                     <li class="nav-item">
                         <li>
-                            <a href="cards.html" class="nav-link">
+                            <a href="cards.html" class="nav-link gradient">
                                 <i class="bi bi-suit-club-fill"></i>
                                 <i class="bi bi-suit-diamond-fill"></i>
                                 <i class="bi bi-suit-heart-fill"></i>
@@ -56,7 +52,7 @@
         <!-- Showcase -->
         <section class="bg-white text-dark p-5 text-center">
             <div class="container">
-                <h1 class="animate__animated animate__fadeInDown">
+                <h1 class="animate__animated animate__fadeInDown gradient">
                     Contact
                 </h1>
                 <h3 class="animate__animated animate__fadeInUp">
