--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
                     GitHub
                 </a>
                 <a class="animate__animated animate__lightSpeedInRight btn btn-light" href="https://www.linkedin.com/in/jiwonpaark/" target="_blank">
-                    <i class="bi bi-linkedin gradient-b"></i>
+                    <i class="bi bi-linkedin"></i>
                     LinkedIn
                 </a>
             </div>
