--- a/public/about-me.html
+++ b/public/about-me.html
@@ -17,8 +17,8 @@
     <!-- NavBar -->
     <nav class="navbar navbar-expand-lg bg-light navbar-light">
         <div class="container">
-            <a href="index.html" class="nav-link">
-                <i class="bi bi-house gradient"></i>
+            <a href="index.html" class="nav-link gradient">
+                <i class="bi bi-house"></i>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
                 <span class="navbar-toggler-icon"></span>
