will be adding an eCommerce page

--- a/public/index.html
+++ b/public/index.html
@@ -63,6 +63,10 @@
                     <i class="bi bi-github"></i>
                     GitHub
                 </a>
+                <a class="animate__animated animate__rubberBand btn btn-light" href="main.js">
+                    <i class="bi bi-cart"></i>
+                    My Store!
+                </a>
                 <a class="animate__animated animate__lightSpeedInRight btn btn-light" href="https://www.linkedin.com/in/jiwonpaark/" target="_blank">
                     <i class="bi bi-linkedin"></i>
                     LinkedIn
