--- a/public/about-me.html
+++ b/public/about-me.html
@@ -73,7 +73,7 @@
                         If you are interested, check out my github!
                     </p>
                 </div>
-                <img class="img-fluid w-50 px-5 mx-auto rounded" src="Jiwon Park 2.jpg" alt="">
+                <img class="img-fluid w-50 px-5 mx-auto rounded" src="Jiwon Park 2.jpg" style="width: 50%; height: 30%" alt="">
             </div>
         </div>
     </section>
