rotating word box and alert for my store added

--- a/public/about-me.html
+++ b/public/about-me.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="gradient.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
@@ -54,7 +54,7 @@
         <div class="container">
             <div class="d-sm-flex">
                 <div>
-                    <h1 class="gradient animate__animated animate__fadeInDown">
+                    <h1 class="gradient color animate__animated animate__fadeInDown">
                         About Me
                     </h1>
                     <p class="animate__animated animate__fadeInUp lead my-4">
@@ -80,7 +80,7 @@
         <!-- Footer -->
         <footer class="mt-auto bg-white text-dark text-center position-relative">
             <div class="container">
-                <p class="lead">Copyright &copy; 2022 Jiwon Park</p>
+                <p class="lead">Copyright &copy; 2023 Jiwon Park</p>
                 <a href="" class="position-absolute bottom-0 end-0 p-5">
                 </a>
             </div>
