--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="gradient.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
@@ -52,21 +52,34 @@
     <!-- Showcase -->
     <section class="bg-white text-dark p-5 text-center">
         <div class="container">
-            <img class="img-fluid py-5 rounded" src="Jiwon Park.jpg" alt="" />
+            <img class="img-fluid py-5 rounded" src="transparent.png" alt="" />
             <div>
                 <h1 class="gradient">Jiwon Park</h1>
-                    <p>College Student, Software Developer
-                    </p>
+                <div class="d-flex flex-column wrapper">
+                    <div class="words">
+                        <span>Aspiring Software Engineer</span>
+                        <span>Gamer</span>
+                        <span>Lego Enthusiast</span>
+                        <span>Food Lover</span>
+                        <span>Aspiring Software Engineer</span>
+                    </div>
+                </div>
+                <p>@ Purdue University 🚂</p>
             </div>
             <div class="h1">
                 <a class="animate__animated animate__lightSpeedInLeft btn btn-light" href="https://github.com/g1g1g1g1g1" target="_blank">
                     <i class="bi bi-github"></i>
                     GitHub
                 </a>
-                <a class="animate__animated animate__rubberBand btn btn-light" href="main.js">
+                <a class="animate__animated animate__rubberBand btn btn-light" onclick="myFunction()">
                     <i class="bi bi-cart"></i>
                     My Store!
                 </a>
+                <script>
+                    function myFunction() {
+                        alert("UNDER CONSTRUCTION");
+                    }
+                </script>
                 <a class="animate__animated animate__lightSpeedInRight btn btn-light" href="https://www.linkedin.com/in/jiwonpaark/" target="_blank">
                     <i class="bi bi-linkedin"></i>
                     LinkedIn
@@ -77,7 +90,7 @@
     <!-- Footer -->
     <footer class="mt-auto bg-white text-dark text-center position-relative">
         <div class="container">
-            <p class="lead">Copyright &copy; 2022 Jiwon Park</p>
+            <p class="lead">Copyright &copy; 2023 Jiwon Park</p>
             <a href="" class="position-absolute bottom-0 end-0 p-5">
             </a>
         </div>
