--- a/public/about-me.html
+++ b/public/about-me.html
@@ -59,7 +59,7 @@
                     </h1>
                     <p class="animate__animated animate__fadeInUp lead my-4">
                         Hi, my name is Jiwon Park and I'm an aspiring software engineer from New Jersey! 
-                        I'm currently a sophomore at Purdue University pursuing Bachelor's of science in Computer Science. 
+                        I'm currently a junior at Purdue University pursuing Bachelor's of science in Computer Science. 
                         I'm a passionate person who loves to program, play games, perform card tricks, travel around the world for good food, and entertain people.
                         <br>
                         <br>
